--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-notifications": "~0.29.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
